# ten-piece

./: .gitignore  README.md
ten-piece/: Pipfile  pyproject.toml
ten-piece-app/: README.md  pyproject.toml  requirements.txt  samconfig.toml  setup.py
ten-piece-app/.aws-sam/: build.toml
ten-piece-app/events/: get_user.json
ten-piece-app/src/: Dockerfile  template.yaml
ten-piece-app/src/scripts/: playground.ipynb
ten-piece-app/src/ten_piece/: app.py  environment.py  requirements.txt
ten-piece-app/src/ten_piece/api/: api.py  characters.py  participants.py  users.py
ten-piece-app/src/ten_piece/client/: characters.py  dynamodb.py  participants.py  users.py
ten-piece-app/src/ten_piece/core/: environment.py  error.py  resolver.py
ten-piece-app/src/ten_piece/data/: api.py  client.py  dynamodb.py
ten-piece-app/src/ten_piece/model/: character.py  gender.py  participant.py  person.py  record.py  user.py
ten-piece-app/tests/: conftest.py
ten-piece-app/tests/data/: test_character_factory.py  test_ranking_factory.py  test_scope_factory.py  test_tag_factory.py  test_user_factory.py
ten-piece-app/tests/fixtures/: api.py  character.py  infra.py  model.py  ranking.py  scope.py  tag.py  user.py
ten-piece-app/tests/integ/: test_data_api.py
ten-piece-app/tests/unit/: test_api_handler.py
ten-piece/src/ten_piece.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ten-piece/src/ten_piece/client/: dynamodb.py  participants.py  users.py
ten-piece/src/ten_piece/model/: record.py  user.py
ten-piece/test/: conftest.py
ten-piece/types/: character.py  ranking.py
(+38 files in other folders)
