[project]
name = "ten_piece"
version = "1.0.0"
description = "Character Hotness Research"
readme = "README.md"
authors = [{ name = "Catie Donnelly" }]

requires-python = ">= 3.12"
dependencies = ["aws_lambda_powertools", "pydantic", "boto3"]
optional-dependencies = { test = ["pytest", "coverage", "moto"] }


[project.urls]
Homepage = "https://github.com/catie/ten-piece"
Issues = "https://github.com/catie/ten-piece/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
packages = ["src/ten_piece"]
require-runtime-dependencies = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

pythonpath = "src"
testpaths = ["tests"]
filterwarnings = ["error", "ignore::UserWarning", "ignore::DeprecationWarning"]


[tool.coverage.report]
# [tool.coverage.run]
include = ["src/*"]
omit = ["*/__init__.py"]
