[project]
name = "ten_piece"
version = "1.0.0"
description = "Simple application to continue critical research into the hottest One Piece characters"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/catie/ten-piece"
Issues = "https://github.com/catie/ten-piece/issues"